# Konductor

./: .cursorignore  .cursorrules  .dockerignore  .envrc  .gitignore  CONTRIBUTING.md  CONTRIBUTOR.md  LICENSE  Pulumi.yaml  README.md  ROADMAP.md  Taskfile.yaml  __main__.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg
.cursor/rules/: cursorrules
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ccio-maintainer/: ccio-maintainer.code-workspace  devcontainer.json
.devfile/: devfile.yaml
.github/kubernetes/: config.py  deployment.py  types.py  versions.py
.github/kubernetes/components/: base.py
.github/kubernetes/metadata/: labels.py
.github/prompt_templates/: new_prompt.txt
.github/staging/: dagger.json
.github/staging/hack/: eks_donor_template.py
.github/staging/scripts/: taggable_aws_resources.py
.talos/patch/: cluster.yaml
core/: __init__.py  deployment.py  utils.py
demos/aws/: __main__.py
demos/azure/: Pulumi.yaml  __main__.py  pyproject.toml
demos/gcp/: __main__.py
demos/k8s/: __main__.py
demos/openstack/: __main__.py  pyproject.toml
docs/: DOCUMENTATION.md  DOCUMENTATION_PLAN.md  HOW_TO.md  PULUMI_PYTHON.md  README.md  call_to_action.md  getting_started.md  infrastructure_as_code.md  pulumi_iac.md  stack_outputs.json
docs/architecture/: next_generation.md  pulumi_componentresources.md  pulumi_resources_parent_child_dependson_dependencies.md
docs/compliance/: COMPLIANCE.md
docs/developer_guide/: README.md  ROADMAP.md  Types_Hierarchy.md  contribution_guidelines.md  deploy.md  devcontainer.md  documentation.md  konductor_developer_guide.md  mermaid-diagrams.md  mermaid-technical-reference.md  module_refactoring.md  pulumi-python.md  pulumi_python.md
docs/developer_guide/azure/: entra-id-oidc.md
docs/developer_guide/testing/: Integration_Testing.md
docs/hack/: eks_donor_template.md
docs/modules/aws/: README.md
docs/modules/core/: README.md  (+1 more)
docs/reference/: TypeDict.md  best_practices.md  pulumi_python.md  style_guide.md
docs/roadmaps/: ROADMAP.md  ROADMAP_Addendum.md
docs/testing/: Property_Testing.md  Standards_and_Quality_Assurance.md  Tools_and_Frameworks.md
docs/usage/: logging.md
docs/user_guide/: HowTo.md  Troubleshooting_Kubernetes_Resource_State.md
examples/: provider_example.py
modules/aws/: __init__.py  config.py  deploy.py  deployment.py  eks.py  exceptions.py  iam.py  organization.py  provider.py  resources.py  security.py  types.py
modules/azure/: __init__.py  resources.py  types.py
modules/core/: __init__.py  compliance_types.py  config.py  deployment.py  exceptions.py  git.py  git_types.py  initialization.py  interfaces.py  metadata.py  providers.py  resource_helpers.py  stack_outputs.py  types.py  utils.py
modules/kubernetes/: __init__.py  deployment.py  provider.py  providers.py  types.py
pulumi/: CALL_TO_ACTION.md  COMPLIANCE.md  PYDANTIC.md  README.md  ROADMAP.md  ROADMAP_Addendum.md  __main__.py  requirements.txt
pulumi/core/: README.md  config.py  deployment.py  metadata.py  resource_helpers.py  types.py  utils.py
pulumi/modules/: README.md
pulumi/stacks/: Pulumi.scip-ops-prod.yaml
src/aws/: config.py  deployment.py  networking.py  organization.py  provider.py
src/core/: __init__.py  deployment.py  git.py  metadata.py  module.py  providers.py  stack_outputs.py  utils.py
stacks/: Pulumi.navteca-aws-credentials-config-smce.yaml  Pulumi.scip-ops-prod.yaml  Pulumi.smdc-admin-ucp.bak.yaml  Pulumi.smdc-admin-ucp.yaml  Pulumi.test.yaml
staging/aux/: documentation.py
tests/: conftest.py
tests/core/: __init__.py  conftest.py  helpers.py  test_config.py  test_deployment.py  test_git.py  test_initialization.py  test_integration.py  test_metadata.py
(+154 files in other folders)
