[tool.poetry]
name = "konductor"
version = "0.0.1"
description = "DevOps Platform IaC Template Repository"
authors = ["Kat Morgan <kathryn.morgan@braincraft.io>"]
readme = "README.md"
packages = [
    { include = "tests" },
    { include = "modules" },
    { include = "__main__.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = ">=3.80.0,<4.0.0"
pulumi-aws = ">=6.60.0,<7.0.0"
pulumi-aws-native = "^0.90.0"
pulumi-kubernetes = "^4.0.0"
packaging = "^23.0"
gitpython = "^3.1.0"
pydantic = "^2.0.0"
protobuf = ">=4.21,<5.0"
pyright = "^1.1.387"
semver = ">=2.8.1,<3.0"
requests = "^2.32.3"
typing-extensions = "^4.12.2"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pylint = "^3.0.0"
pyright = "^1.1.0"
pytest-asyncio = "<0.24"
pytest-cov = "^4.0.0"
pytest = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "tests",
    "modules",
    "__main__.py"
]
exclude = ["**/node_modules", "**/__pycache__", ".github"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "R0903",  # too-few-public-methods
]

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "build", "dist", ".git", ".venv", "venv", "node_modules"]
